reworked html and css again to address issues with pictures/icons not showing on deployed link

--- a/style.css
+++ b/style.css
@@ -3,41 +3,9 @@
     padding: 0;
     margin: 0;
 }
+
 body {
-    background: #d9dcd6;
-}
-
-header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background: #2a607c;
-    color: #ffffff;
-}
-
-header h1 {
-    display: inline-block;
-    font-size: 48px;
-}
-
-.seo {
-    color: #d9dcd6;
-}
-
-header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-
-header div ul {
-    list-style-type: none;
-}
-
-header div ul li {
-    display: inline-block;
-    margin-left: 25px;
+    background-color: #d9dcd6;
 }
 
 a {
@@ -49,30 +17,85 @@ p {
     font-size: 16px;
 }
 
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background: url(/images/digital-marketing-meeting.jpg) center/cover;
-}
-
-.float-left {
+.float-lft {
     float: left;
     margin-right: 25px;
 }
 
-.float-right {
+.float-rght {
     float: right;
     margin-left: 25px;
 }
 
-main {
+/* Navigation Bar */
+header {
+    padding: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
+}
+
+header h1 {
+    display: inline-block;
+    font-size: 48px;
+}
+
+header h1 .seo {
+    color: #d9dcd6;
+}
+
+nav {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+nav ul {
+    list-style-type: none;
+}
+
+nav ul li {
+    display: inline-block;
+    margin-left: 25px;
+}
+
+/* Hero Section */
+
+.hero img{
+    height: 100%;
+    width: 100%;
+    margin-bottom: 25px;
+}
+
+/* CONTENT SECTION */
+.content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-aside {
+.content div {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.content h1 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.content img {
+    max-height: 200px;
+}
+
+/* BENEFITS SECTION */
+.benefits {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -83,43 +106,26 @@ aside {
     background-color: #2589bd;
 }
 
-.aside1 {
+.benefits div {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.aside1 h3 {
+.benefits h2 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.aside1 img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.main1 {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.main1 img {
-    max-height: 200px;
-}
-
-.main1 h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/* Footer */
 
 footer {
     padding: 30px;
-    margin-left: 100px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
